--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,7 +1,73 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+.wrapper {
+  height: 100%;
+}
+
+.content {
+  text-align: center;
+}
+
 #logo {
   min-height: 500px;
 }
 
-#content {
+#container {
   background-image: url(../img/backdrop.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+}
+
+#content {
+  max-width: 800px;
+  text-align: center;
+  margin: auto;
+  padding-top: 5%;
+}
+
+.list-hours {
+  font-size: 0.9rem;
+}
+
+.list-hours .list-hours-item {
+  border-bottom: 1px solid rgba(230, 167, 86, 0.5);
+  padding-bottom: 0.25rem;
+  margin-bottom: 1rem;
+  font-style: italic;
+}
+
+.list-hours .list-hours-item.today {
+  font-weight: bold;
+  color: #e6a756;
+}
+
+.pd-top-25 {
+  padding-top: 25% !important;
+}
+
+.pd-top-50 {
+  padding-top: 50% !important;
+}
+
+@media (max-width: 992px) {
+
+  .custom-menu {
+    margin-right: -40px !important;
+  }
+
+}
+
+
+@media (min-width: 992px) {
+  .list-hours {
+    width: 50%;
+    font-size: 1.1rem;
+  }
 }
