--- a/css/style.css
+++ b/css/style.css
@@ -11862,18 +11862,19 @@ h5,
 
 #sidebar ul li a:hover {
   color: #fff;
-  background: #2f89fc;
-  border-bottom: 1px solid #2f89fc;
+  /* background: #2f89fc; */
+  background-color: rgba(0, 0, 0, 0.1);
+  /* border-bottom: 1px solid; */
 }
 
 #sidebar ul li.active>a {
   background: transparent;
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 #sidebar ul li.active>a:hover {
-  background: #2f89fc;
-  border-bottom: 1px solid #2f89fc;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 991.98px) {
@@ -11886,7 +11887,7 @@ h5,
   }
 
   #sidebar .custom-menu {
-    margin-right: -60px !important;
+    margin-right: -40px !important;
     top: 10px !important;
   }
 }
@@ -11996,14 +11997,15 @@ a[data-toggle="collapse"] {
 }
 
 .btn.btn-primary {
-  background: #2f89fc;
-  border-color: #2f89fc;
+  /* background: #2f89fc;
+  border-color: #2f89fc; */
 }
 
 .btn.btn-primary:hover,
 .btn.btn-primary:focus {
-  background: #2f89fc !important;
-  border-color: #2f89fc !important;
+  /* background: #2f89fc !important;
+  border-color: #2f89fc !important; */
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .footer p {
