--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -59,7 +59,8 @@ body {
 @media (max-width: 992px) {
 
   .custom-menu {
-    margin-right: -40px !important;
+    margin-right: 0px !important;
+    z-index: 1;
   }
 
 }
